# markor

./: .gitignore  Cargo.toml  README.md  graph
src/: algo.rs  algo_hashing.rs  lib.rs  main.rs
