[package]
name = "markov-chainz"
version = "0.1.0"
edition = "2021"


[dependencies]
bincode = { version = "1.3", default-features = false }
serde = { version = "1.0", default-features = false, features = ['derive'] }
rand = { version = "0.8", default-features = true }
rayon = { version = "1.5", default-features = false }
